// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`flow-mapping.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
{
  foo: 1,
  foo: 2
}

---
{
  foo: {
    bar: 1,
    bar: 2
  }
}

---
{
  foo: {
    bar: 1
  },
  foo: {
    baz: 2
  }
}

---
{
  ? foo
  : 1,
  ? foo
  : 2
}
=====================================output=====================================
---
{foo: 1, foo: 2}
---
{foo: {bar: 1, bar: 2}}
---
{foo: {bar: 1}, foo: {baz: 2}}
---
{foo: 1, foo: 2}

================================================================================
`;

exports[`flow-mapping.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
---
{
  foo: 1,
  foo: 2
}

---
{
  foo: {
    bar: 1,
    bar: 2
  }
}

---
{
  foo: {
    bar: 1
  },
  foo: {
    baz: 2
  }
}

---
{
  ? foo
  : 1,
  ? foo
  : 2
}
=====================================output=====================================
---
{ foo: 1, foo: 2 }
---
{ foo: { bar: 1, bar: 2 } }
---
{ foo: { bar: 1 }, foo: { baz: 2 } }
---
{ foo: 1, foo: 2 }

================================================================================
`;

exports[`flow-mapping.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
{
  foo: 1,
  foo: 2
}

---
{
  foo: {
    bar: 1,
    bar: 2
  }
}

---
{
  foo: {
    bar: 1
  },
  foo: {
    baz: 2
  }
}

---
{
  ? foo
  : 1,
  ? foo
  : 2
}
=====================================output=====================================
---
{ foo: 1, foo: 2 }
---
{ foo: { bar: 1, bar: 2 } }
---
{ foo: { bar: 1 }, foo: { baz: 2 } }
---
{ foo: 1, foo: 2 }

================================================================================
`;

exports[`mapping.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
foo: 1
foo: 2

---
foo:
  bar: 1
  bar: 2

---
foo:
  bar:
    baz: 1
    baz: 2

---
foo:
  - bar: item1
    bar: item2
  - baz: 1
    baz: 2

---
? foo
: 1
? foo
: 2
=====================================output=====================================
---
foo: 1
foo: 2

---
foo:
  bar: 1
  bar: 2
---
foo:
  bar:
    baz: 1
    baz: 2
---
foo:
  - bar: item1
    bar: item2
  - baz: 1
    baz: 2
---
foo: 1
foo: 2

================================================================================
`;

exports[`mapping.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
---
foo: 1
foo: 2

---
foo:
  bar: 1
  bar: 2

---
foo:
  bar:
    baz: 1
    baz: 2

---
foo:
  - bar: item1
    bar: item2
  - baz: 1
    baz: 2

---
? foo
: 1
? foo
: 2
=====================================output=====================================
---
foo: 1
foo: 2

---
foo:
    bar: 1
    bar: 2
---
foo:
    bar:
        baz: 1
        baz: 2
---
foo:
    - bar: item1
      bar: item2
    - baz: 1
      baz: 2
---
foo: 1
foo: 2

================================================================================
`;

exports[`mapping.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
foo: 1
foo: 2

---
foo:
  bar: 1
  bar: 2

---
foo:
  bar:
    baz: 1
    baz: 2

---
foo:
  - bar: item1
    bar: item2
  - baz: 1
    baz: 2

---
? foo
: 1
? foo
: 2
=====================================output=====================================
---
foo: 1
foo: 2

---
foo:
  bar: 1
  bar: 2
---
foo:
  bar:
    baz: 1
    baz: 2
---
foo:
  - bar: item1
    bar: item2
  - baz: 1
    baz: 2
---
foo: 1
foo: 2

================================================================================
`;

exports[`merge-key.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

=====================================output=====================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

================================================================================
`;

exports[`merge-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

=====================================output=====================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
    <<: *a
    <<: *b

================================================================================
`;

exports[`merge-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

=====================================output=====================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

================================================================================
`;
